--- a/src/styles/custom.css
+++ b/src/styles/custom.css
@@ -15,3 +15,14 @@
     --sl-text-h3: 20px;
 }
 
+.text-center {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+
+.full-width {
+    width: 100%;
+}
