Update footer date

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -17,7 +17,10 @@ const isHomepage = Astro.props.id === '';
         <footer class=".footer">
             <div class="containerBlock">
                 <p>
-                    © 2024 The site is the property of UAProject. All rights reserved.
+                    © 2022 - 2025
+                </p>
+                <p>
+                    The site is the property of UAProject. All rights reserved.
                 </p>
                 <p>
                     We are in no way affiliated with or endorsed by Mojang, AB.
