Comment out gray color variable in custom CSS

--- a/src/styles/custom.css
+++ b/src/styles/custom.css
@@ -3,8 +3,9 @@
     --sl-font-bold: 'Headlines Font', sans-serif;
     --sl-content-width: 60rem;
     --sl-text-5xl: 2.5rem;
-    --sl-color-gray-6: #171A21;
+   /* --sl-color-gray-6: #171A21;
     --sl-color-black: #23262C;
+    */
     --sl-sidebar-pad-x: 0.5rem;
     --sl-sidebar-width: 17rem;
     --sl-sidebar-width-closed: 4rem;
