Update links to new domain in documentation and configuration files

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -22,12 +22,12 @@ const isHomepage = Astro.props.id === '';
                         </div>
                     </div>
                     <div class="uap-footer-nav">
-                        <a href="https://uaproject.xyz" class="uap-footer-link">🏠 Головна</a>
-                        <a href="https://docs.uaproject.xyz" class="uap-footer-link uap-footer-link-active">📚 Вікіпедія</a>
-                        <a href="https://uaproject.xyz/shop" class="uap-footer-link">🛒 Крамниця</a>
-                        <a href="https://uaproject.xyz/game" class="uap-footer-link">🚀 Початок гри</a>
-                        <a href="https://uaproject.xyz/form" class="uap-footer-link">📝 Анкета</a>
-                        <a href="https://map.uaproject.xyz" class="uap-footer-link">🗺️ Мапа</a>
+                        <a href="https://uaproject.net" class="uap-footer-link">🏠 Головна</a>
+                        <a href="https://docs.uaproject.net" class="uap-footer-link uap-footer-link-active">📚 Вікіпедія</a>
+                        <a href="https://uaproject.net/shop" class="uap-footer-link">🛒 Крамниця</a>
+                        <a href="https://uaproject.net/game" class="uap-footer-link">🚀 Початок гри</a>
+                        <a href="https://uaproject.net/form" class="uap-footer-link">📝 Анкета</a>
+                        <a href="https://map.uaproject.net" class="uap-footer-link">🗺️ Мапа</a>
                     </div>
                 </div>
             </footer>
@@ -47,12 +47,12 @@ const isHomepage = Astro.props.id === '';
                     </div>
                 </div>
                 <div class="uap-footer-nav">
-                    <a href="https://uaproject.xyz" class="uap-footer-link">🏠 Головна</a>
-                    <a href="https://wiki.uaproject.xyz" class="uap-footer-link uap-footer-link-active">📚 Вікіпедія</a>
-                    <a href="https://uaproject.xyz/shop" class="uap-footer-link">🛒 Крамниця</a>
-                    <a href="https://uaproject.xyz/game" class="uap-footer-link">🚀 Початок гри</a>
-                    <a href="https://uaproject.xyz/form" class="uap-footer-link">📝 Анкета</a>
-                    <a href="https://map.uaproject.xyz" class="uap-footer-link">🗺️ Мапа</a>
+                    <a href="https://uaproject.net" class="uap-footer-link">🏠 Головна</a>
+                    <a href="https://wiki.uaproject.net" class="uap-footer-link uap-footer-link-active">📚 Вікіпедія</a>
+                    <a href="https://uaproject.net/shop" class="uap-footer-link">🛒 Крамниця</a>
+                    <a href="https://uaproject.net/game" class="uap-footer-link">🚀 Початок гри</a>
+                    <a href="https://uaproject.net/form" class="uap-footer-link">📝 Анкета</a>
+                    <a href="https://map.uaproject.net" class="uap-footer-link">🗺️ Мапа</a>
                 </div>
             </div>
         </footer>
